# ComfyUI-Kolors-MZ

./: .gitignore  README.md  __init__.py  hook_comfyui.py  hook_comfyui_kolors_v1.py  hook_comfyui_kolors_v2.py  mz_kolors_core.py  mz_kolors_legacy.py  mz_kolors_utils.py  pyproject.toml  test.py
.github/workflows/: publish.yml
ComfyUI_IPAdapter_plus/: IPAdapterPlus.py  utils.py
chatglm3/: configuration_chatglm.py  quantization.py  tokenization_chatglm.py
clip_vit_336/: config.json
